--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,43 @@
-- name: Upload artifacts (logs, screenshots, HTML)
-  uses: actions/upload-artifact@v3
-  with:
-    name: form-test-results
-    path: |
-      form_test_log.txt
-      form_test_screenshot.png
-      form_test_source.html
+name: Contact Form Biweekly Test
+
+on:
+  schedule:
+    - cron: "0 14 */14 * *"  # every 14 days at 14:00 UTC
+  workflow_dispatch:          # allow manual runs
+
+jobs:
+  run-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies and Playwright browsers
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          python -m playwright install --with-deps
+
+      - name: Run contact form test
+        env:
+          SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
+          SMTP_PORT: ${{ secrets.SMTP_PORT }}
+          SMTP_USER: ${{ secrets.SMTP_USER }}
+          SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
+        run: |
+          python test_contact_form.py
+
+      - name: Upload artifacts (logs, screenshots, HTML)
+        uses: actions/upload-artifact@v3
+        with:
+          name: form-test-results
+          path: |
+            form_test_log.txt
+            form_test_screenshot.png
+            form_test_source.html
+
