--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Contact Form Biweekly Test
 
 on:
   schedule:
-    - cron: "0 14 */14 * *"  # runs every 14 days at 14:00 UTC
-  workflow_dispatch:          # allows manual trigger
+    - cron: "0 14 1,15 * *"   # (more reliable than */14) runs on the 1st & 15th
+  workflow_dispatch:
 
 jobs:
   run-test:
@@ -13,9 +13,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+          cache: 'pip'
 
       - name: Install dependencies & Playwright browsers
         run: |
@@ -25,13 +26,17 @@ jobs:
 
       - name: Run contact form test
         env:
-          SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
-          SMTP_PORT: ${{ secrets.SMTP_PORT }}
-          SMTP_USER: ${{ secrets.SMTP_USER }}
-          SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
+          TEST_URL: ${{ secrets.TEST_URL }}                # <-- add this
+          SUCCESS_SELECTOR: ${{ secrets.SUCCESS_SELECTOR }}# <-- and this
+          TEST_EMAIL: ${{ secrets.TEST_EMAIL }}            # optional
+          SMTP_SERVER: ${{ secrets.SMTP_SERVER }}          # optional
+          SMTP_PORT: ${{ secrets.SMTP_PORT }}              # optional
+          SMTP_USER: ${{ secrets.SMTP_USER }}              # optional
+          SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}      # optional
         run: python test_contact_form.py
 
       - name: Upload test artifacts
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: form-test-results
@@ -39,4 +44,4 @@ jobs:
             form_test_log.txt
             form_test_screenshot.png
             form_test_source.html
-
+          if-no-files-found: ignore
